# instrument-prototype

./: .travis.yml  CMakeLists.txt  README.md  install_script.sh
cow_instrument/: AssemblyInfo.h  Bool.h  CMakeLists.txt  Command.h  Component.h  ComponentInfo.cpp  ComponentInfo.h  ComponentProxy.cpp  ComponentProxy.h  ComponentVisitor.h  CompositeComponent.cpp  CompositeComponent.h  Detector.cpp  Detector.h  DetectorComponent.cpp  DetectorComponent.h  DetectorComponentFactory.cpp  DetectorComponentFactory.h  DetectorFactory.h  DetectorInfo.cpp  DetectorInfo.h  FixedLengthVector.h  FlatTree.cpp  FlatTree.h  IDType.h  IdType.h  IndexTranslator.h  Instrument.h  InstrumentTree.cpp  InstrumentTree.h  InstrumentTreeFactory.h  IntToType.h  L1s.h  L2s.h  LinkedTreeParser.cpp  LinkedTreeParser.h  MaskFlags.h  MonitorFlags.h  MoveCommand.cpp  MoveCommand.h  (+33 more)
cow_instrument/benchmark/: BenchmarkPolicy.cpp  BenchmarkPolicy.h  CMakeLists.txt  ComponentInfoWriteRotateBenchmark.cpp  ComponentInfoWriteTranslateBenchmark.cpp  DetectorInfoConstructionBenchmark.cpp  DetectorInfoReadBenchmark.cpp  DetectorInfoWriteRotateBenchmark.cpp  DetectorInfoWriteTranslateBenchmark.cpp  InstrumentConstructionBenchmark.cpp  InstrumentCopyBenchmark.cpp  InstrumentReadBenchmark.cpp  InstrumentSerializationBenchmark.cpp  InstrumentWriteRotateBenchmark.cpp  InstrumentWriteTranslateBenchmark.cpp  ScanningDetectorInfo.cpp  SpectrumInfoBenchmark.cpp  StandardBenchmark.h  StandardInstrument.cpp  StandardInstrument.h
cow_instrument/documentation/: evaluation.md
cow_instrument/documentation/existing_no_map/: callgrind.out.28042
cow_instrument/documentation/existing_with_map/: callgrind.out.30825
cow_instrument/documentation/mapless_instrument/: callgrind.out.306
cow_instrument/mappers/: ArraySerialization.h  CMakeLists.txt  ComponentIdTypeMapper.h  ComponentMapper.h  ComponentMapperFactory.cpp  ComponentMapperFactory.h  CompositeComponentMapper.cpp  CompositeComponentMapper.h  DetectorComponentMapper.cpp  DetectorComponentMapper.h  DetectorIdTypeMapper.h  FlatTreeMapper.cpp  FlatTreeMapper.h  InstrumentTreeMapper.cpp  InstrumentTreeMapper.h  IntToTypeMapper.h  NodeMapper.cpp  NodeMapper.h  NullComponentMapper.cpp  NullComponentMapper.h  ParabolicGuideMapper.cpp  ParabolicGuideMapper.h  PointPathComponentMapper.h  PointSampleMapper.cpp  PointSampleMapper.h  PointSourceMapper.cpp  PointSourceMapper.h  PolymorphicSerializer.h  SharedPtrSerialization.h  SingleItemMapper.h  V3DMapper.cpp  V3DMapper.h  VectorOfComponentMapper.h  VectorOfMapper.h
cow_instrument/performance/: .TEST-GeometryTest.InstrumentTestPerformance.xml.swp  TEST-GeometryTest.InstrumentTestPerformance.xml  evaluation.md
cow_instrument/testing/: AssemblyInfoTest.cpp  CMakeLists.txt  ComponentInfoTest.cpp  ComponentMapperTest.cpp  ComponentProxyTest.cpp  ComponentVisitorTest.cpp  CompositeComponentMapperTest.cpp  CompositeComponentTest.cpp  DetectorComponentFactoryTest.cpp  DetectorComponentMapperTest.cpp  DetectorComponentTest.cpp  DetectorInfoTest.cpp  DetectorTest.cpp  EigenTest.cpp  Example.cpp  FixedLengthVectorTest.cpp  FlatTreeMapperTest.cpp  FlatTreeTest.cpp  IndexTranslatorTest.cpp  InstrumentTest.cpp  InstrumentTreeMapperTest.cpp  InstrumentTreeTest.cpp  IntToTypeMapperTest.cpp  LinkedTreeParserTest.cpp  MPITest.cpp  MockTypes.h  MoveCommandTest.cpp  NodeIteratorTest.cpp  NodeMapperTest.cpp  NodeTest.cpp  NullComponentMapperTest.cpp  ParabolicGuideMapperTest.cpp  ParabolicGuideTest.cpp  PathComponentInfoTest.cpp  PathComponentTest.cpp  PointPathComponentMapperTest.cpp  PointPathComponentTest.cpp  RotateCommandTest.cpp  SOASourceTest.cpp  ScanTimeTest.cpp  (+6 more)
testing/: CMakeLists.txt  test.cpp
